+++++++++++
Python News
+++++++++++

What's New in Python 3.2 Release Candidate 1
============================================

Core and Builtins
-----------------

- Issue #9015, #9611: FileIO.readinto(), FileIO.write() and os.write() clamp
  the length to 2^31-1 on Windows.

- Issue #8278: On Windows and with a NTFS filesystem, os.stat() and os.utime()
  can now handle dates after 2038.

- Issue #10780: PyErr_SetFromWindowsErrWithFilename() and
  PyErr_SetExcFromWindowsErrWithFilename() decode the filename from the
  filesystem encoding instead of UTF-8.

- Issue #10779: PyErr_WarnExplicit() decodes the filename from the filesystem
  encoding instead of UTF-8.

- Add sys.flags attribute for the new -q command-line option.

Library
-------

- Issue #6643: Reinitialize locks held within the threading module after fork
  to avoid a potential rare deadlock or crash on some platforms.

- Issue #10806, issue #9905: Fix subprocess pipes when some of the standard
  file descriptors (0, 1, 2) are closed in the parent process.  Initial
  patch by Ross Lagerwall.

- `unittest.TestCase` can be instantiated without a method name; for simpler
  exploration from the interactive interpreter.

- Issue #10798: Reject supporting concurrent.futures if the system has too
  few POSIX semaphores.

- Issue #10807: Remove base64, bz2, hex, quopri, rot13, uu and zlib codecs from
  the codec aliases. They are still accessible via codecs.lookup().

- Issue #10801: In zipfile, support different encodings for the header and
  the filenames.

- Issue #6285: IDLE no longer crashes on missing help file; patch by Scott
  David Daniels.

- Fix collections.OrderedDict.setdefault() so that it works in
  subclasses that define __missing__().

- Issue #10786: unittest.TextTestRunner default stream no longer bound at
  import time. `sys.stderr` now looked up at instantiation time.  Fix
  contributed by Mark Roddy.

- Issue #10753: Characters ';','=' and ',' in the PATH_INFO environment